Added Navigation Bar in Header Section with Tailwind CSS

--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
 
 </head>
 <body>
+    <!-- navigation section starts here -->
+    <header class="inter-font flex justify-between items-center px-14 py-6">
+        <!-- the container of logo and website name -->
+        <div class="logo flex items-center" >
+        <img src="./assets/logo.png" alt="website-log" class="w-12">
+        <h1 class="text-[#006747] font-black ml-3 ">Emergency <br> Service</h1>
+        </div>
+        <!-- the container of buttons -->
+        <div class="space-x-5">
+            <button class="btn btn-soft px-6 py-3 bg-[#41ff6b1a] rounded-[50px] font-black ">0 <img src="./assets/heart.png" alt="heart" class="w-6"></button>
+
+            <button class="btn btn-soft px-6 py-3 bg-[#41ff6b1a] rounded-[50px] font-black ">100<img src="./assets/coin.png" alt="coin" class="w-6"></button>
+
+            <button class="btn btn-soft px-9 py-3 bg-[#00A63E] rounded-[50px]   text-white font-semibold ">0 Copy</button>
+        </div>
+
+    </header>
     <main>
 
     </main>
