Added hero banner section with logo, title and subtitle

--- a/index.html
+++ b/index.html
@@ -29,25 +29,34 @@
 
 
 </head>
-<body>
+<body class="min-h-[100vh]">
     <!-- navigation section starts here -->
     <header class="inter-font flex justify-between items-center px-14 py-6">
         <!-- the container of logo and website name -->
         <div class="logo flex items-center" >
         <img src="./assets/logo.png" alt="website-log" class="w-12">
-        <h1 class="text-[#006747] font-black ml-3 ">Emergency <br> Service</h1>
+        <h1 class="text-[#006747] font-black ml-3 text-xl ">Emergency <br> Service</h1>
         </div>
         <!-- the container of buttons -->
         <div class="space-x-5">
-            <button class="btn btn-soft px-6 py-3 bg-[#41ff6b1a] rounded-[50px] font-black ">0 <img src="./assets/heart.png" alt="heart" class="w-6"></button>
+            <button class="btn btn-soft px-6 py-3 bg-[#41ff6b1a] rounded-[50px] font-black text-[16px] ">0 <img src="./assets/heart.png" alt="heart" class="w-6"></button>
 
-            <button class="btn btn-soft px-6 py-3 bg-[#41ff6b1a] rounded-[50px] font-black ">100<img src="./assets/coin.png" alt="coin" class="w-6"></button>
+            <button class="btn btn-soft px-6 py-3 bg-[#41ff6b1a] rounded-[50px] font-black text-[16px] ">100<img src="./assets/coin.png" alt="coin" class="w-6"></button>
 
-            <button class="btn btn-soft px-9 py-3 bg-[#00A63E] rounded-[50px]   text-white font-semibold ">0 Copy</button>
+            <button class="btn btn-soft px-9 py-3 bg-[#00A63E] rounded-[50px]   text-white font-semibold text-[16px]">0 Copy</button>
         </div>
 
     </header>
     <main>
+        <!-- hero banner section starts here -->
+         <section class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] min-h-[230px] hind-madurai-font px-14 py-4">
+            <div class="flex flex-col justify-center items-center ">
+                <img src="./assets/logo-dark.png" alt="banner-image" class="w-24 ">
+                <h1 class="text-white text-4xl font-bold mt-5 ">Emergency Service Directory</h1>
+                <p class="text-white font-semibold text-xl mt-6">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+            </div>
+
+         </section>
 
     </main>
 </body>
