Design emergency hotline section using grid layout for better structure and responsiveness

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         </div>
 
     </header>
-    <main>
+    <main class="bg-[#f5fff6]">
         <!-- hero banner section starts here -->
-         <section class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] min-h-[230px] hind-madurai-font px-14 py-4">
+         <section class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] min-h-[240px] hind-madurai-font px-14 py-4">
             <div class="flex flex-col justify-center items-center ">
                 <img src="./assets/logo-dark.png" alt="banner-image" class="w-24 ">
                 <h1 class="text-white text-4xl font-bold mt-5 ">Emergency Service Directory</h1>
@@ -57,6 +57,186 @@
             </div>
 
          </section>
+         <!-- emergency services section starts here -->
+          <section id="emergency-service-container"  class="  w-11/12 mx-auto grid grid-cols-12 gap-8 py-10">
+            <!-- emergency-services container -->
+           <section id="emergency-services" class=" col-span-9  ">
+            <!-- emergency-services-card-box -->
+          <div id="emergency-services-card" class="grid grid-cols-3 gap-5">
+              <!-- emergency-card-1 -->
+            <div class="min-w-full bg-white rounded-xl p-8 shadow-sm">
+                <div class="flex justify-between items-center">
+                    <img src="./assets/emergency.png" alt="emergency" class="w-9 bg-[#FFE3E2] p-2 rounded-lg">
+                    <img src="./assets/heart1.png" alt="heart" class="w-6">
+                </div>
+                <div>
+                    <h2 class="hind-madurai-font font-bold text-xl mt-3 ">National Emergency Number</h2>
+                <p class="roboto-font  text-[#5c5c5c]">National Emergency</p>
+                <p class="roboto-font font-bold text-3xl mt-3">999</p>
+                <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-7 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">All</div>
+                 </div>
+                 <div >
+                    <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[130px] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400 w-[130px]   bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                 </div>
+
+            </div>
+            <!-- emergency-card-2 -->
+            <div class="min-w-full bg-white rounded-xl p-8 shadow-sm">
+                <div class="flex justify-between items-center">
+                    <img src="./assets/police.png" alt="police" class="w-9 bg-[#DFEFFF] p-2 rounded-lg">
+                    <img src="./assets/heart1.png" alt="heart" class="w-6">
+                </div>
+            <div>
+                    <h2 class="hind-madurai-font font-bold text-xl mt-3 ">Police Helpline Number</h2>
+                <p class="roboto-font  text-[#5c5c5c]">Police</p>
+                <p class="roboto-font font-bold text-3xl mt-3">999</p>
+                   <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Police</div>
+            </div>
+               <div >
+                  <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[130px] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400  p-4 w-[130px] bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+               </div>
+
+            </div>
+            <!-- emergency-card-3 -->
+            <div class="min-w-full bg-white rounded-xl p-8 shadow-sm">
+                <div class="flex justify-between items-center">
+                    <img src="./assets/fire-service.png" alt="fire-service" class="w-9 bg-[#FFE3E2] p-2 rounded-lg">
+                    <img src="./assets/heart1.png" alt="heart" class="w-6">
+                </div>
+               <div>
+                 <h2 class="hind-madurai-font font-bold text-xl mt-3 ">Fire Service Number</h2>
+                <p class="roboto-font  text-[#5c5c5c]">Fire Service</p>
+                <p class="roboto-font font-bold text-3xl mt-3">999</p>
+                <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Fire</div>
+               </div>
+                <div >
+                     <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[130px]  bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400 w-[130px]  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                </div>
+
+            </div>
+            <!-- emergency-card-4 -->
+            <div class="min-w-full bg-white rounded-xl p-8 shadow-sm">
+                <div class="flex justify-between items-center">
+                    <img src="./assets/ambulance.png" alt="ambulance" class="w-9 bg-[#FFE3E2] p-2 rounded-lg">
+                    <img src="./assets/heart1.png" alt="heart" class="w-6">
+                </div>
+                <div>
+                    <h2 class="hind-madurai-font font-bold text-xl mt-3 ">Ambulance Service</h2>
+                <p class="roboto-font  text-[#5c5c5c]">Ambulance</p>
+                <p class="roboto-font font-bold text-3xl mt-3">1994-999999</p>
+                <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Health</div>
+                </div>
+                 <div >
+                    <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[130px] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400  p-4 w-[130px] bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                 </div>
+
+            </div>
+            <!-- emergency-card-5 -->
+            <div class="min-w-full bg-white rounded-xl p-8 shadow-sm">
+                <div class="flex justify-between items-center">
+                    <img src="./assets/emergency.png" alt="emergency" class="w-9 bg-[#FFE3E2] p-2 rounded-lg">
+                    <img src="./assets/heart1.png" alt="heart" class="w-6">
+                </div>
+                <div>
+                   <h2 class="hind-madurai-font font-bold text-xl mt-3 ">Women & Child Helpline</h2>
+                <p class="roboto-font  text-[#5c5c5c]">Women & Child Helpline</p>
+                <p class="roboto-font font-bold text-3xl mt-3">109</p>
+                  <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Help</div>
+                </div>
+             <div >
+                    <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[130px] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400  p-4 w-[130px] bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+             </div>
+
+            </div>
+            <!-- emergency-card-6 -->
+            <div class="min-w-full bg-white rounded-xl p-8 shadow-sm">
+                <div class="flex justify-between items-center">
+                    <img src="./assets/emergency.png" alt="emergency" class="w-9 bg-[#FFE3E2] p-2 rounded-lg">
+                    <img src="./assets/heart1.png" alt="heart" class="w-6">
+                </div>
+                <div>
+                    <h2 class="hind-madurai-font font-bold text-xl mt-3 ">Anti-Corruption Helpline</h2>
+                <p class="roboto-font  text-[#5c5c5c]">Anti-Corruption</p>
+                <p class="roboto-font font-bold text-3xl mt-3">106</p>
+                <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Govt.</div>
+                </div>
+              <div>
+                   <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[130px]  bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400 w-[130px] p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+              </div>
+
+            </div>
+            <!-- emergency-card-7 -->
+            <div class="min-w-full bg-white rounded-xl p-8 shadow-sm">
+                <div class="flex justify-between items-center">
+                    <img src="./assets/emergency.png" alt="emergency" class="w-9 bg-[#FFE3E2] p-2 rounded-lg">
+                    <img src="./assets/heart1.png" alt="heart" class="w-6">
+                </div>
+                <div>
+                    <h2 class="hind-madurai-font font-bold text-xl mt-3 ">Electricity Helpline</h2>
+                <p class="roboto-font  text-[#5c5c5c]">Electricity Outage</p>
+                <p class="roboto-font font-bold text-3xl mt-3">16216</p>
+                 <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-12 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Electricity</div>
+                </div>
+                <div>
+                     <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[130px] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400 w-[130px]  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                </div>
+
+            </div>
+            <!-- emergency-card-8 -->
+            <div class="min-w-full bg-white rounded-xl p-8 shadow-sm">
+                <div class="flex justify-between items-center">
+                    <img src="./assets/brac.png" alt="brac" class="w-9 bg-[#FFE3E2] p-2 rounded-lg">
+                    <img src="./assets/heart1.png" alt="heart" class="w-6">
+                </div>
+              <div>
+                  <h2 class="hind-madurai-font font-bold text-xl mt-3 ">Brac Helpline</h2>
+                <p class="roboto-font  text-[#5c5c5c]">Brac</p>
+                <p class="roboto-font font-bold text-3xl mt-3">16445</p>
+                    <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">NGO</div>
+              </div>
+                 <div>
+                    <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[130px] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400 w-[130px] p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                 </div>
+
+            </div>
+            <!-- emergency-card-9 -->
+            <div class="min-w-full bg-white rounded-xl p-8 shadow-sm">
+                <div class="flex justify-between items-center">
+                    <img src="./assets/Bangladesh-Railway.png" alt="Bangladesh-Railway" class="w-9 bg-[#FFE3E2] p-2 rounded-lg">
+                    <img src="./assets/heart1.png" alt="heart" class="w-6">
+                </div>
+                <div>
+                    <h2 class="hind-madurai-font font-bold text-xl mt-3 ">Bangladesh Railway Helpline </h2>
+                <p class="roboto-font  text-[#5c5c5c]">Bangladesh Railway</p>
+                <p class="roboto-font font-bold text-3xl mt-3">163</p>
+                 <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Travel</div>
+                </div>
+                <div>
+                     <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[130px] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400 w-[130px]  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                </div>
+
+            </div>
+            
+          </div>
+
+           </section>
+           <!-- call history container -->
+           <aside id="call-history" class=" col-span-3">
+            <h1>cart</h1>
+
+           </aside>
+
+          </section>
+
 
     </main>
 </body>
