Create and style history section for the site

--- a/index.html
+++ b/index.html
@@ -214,14 +214,14 @@
                     <img src="./assets/heart1.png" alt="heart" class="w-6">
                 </div>
                 <div>
-                    <h2 class="hind-madurai-font font-bold text-xl mt-3 ">Bangladesh Railway Helpline </h2>
+                    <h2 class="hind-madurai-font font-bold text-xl mt-3  ">Bangladesh Railway Helpline </h2>
                 <p class="roboto-font  text-[#5c5c5c]">Bangladesh Railway</p>
                 <p class="roboto-font font-bold text-3xl mt-3">163</p>
                  <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Travel</div>
                 </div>
                 <div>
-                     <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[130px] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400 w-[130px]  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                     <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[180px] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400 w-[180px]  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
 
             </div>
@@ -231,7 +231,13 @@
            </section>
            <!-- call history container -->
            <aside id="call-history" class=" col-span-3">
-            <h1>cart</h1>
+            <div class="bg-white rounded-xl p-6">
+               <div class="flex justify-between items-center">
+                 <h1 class="roboto-font text-xl text-[#111111] font-medium"><i class="fa-regular fa-clock"></i> Call History</h1>
+                <button class="btn btn-soft inter-font px-9 py-3 bg-[#00A63E] rounded-[50px]   text-white font-semibold text-[16px]">Clear</button>
+               </div>
+
+            </div>
 
            </aside>
 
