Update button width in emergency hotline  section

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                 <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-7 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">All</div>
                  </div>
                  <div >
-                    <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[130px] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400 w-[130px]   bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                    <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[50%] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400 w-[50%]   bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                  </div>
 
             </div>
@@ -94,8 +94,8 @@
                    <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Police</div>
             </div>
                <div >
-                  <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[130px] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400  p-4 w-[130px] bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                  <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[50%] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400  p-4 w-[50%] bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                </div>
 
             </div>
@@ -112,8 +112,8 @@
                 <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Fire</div>
                </div>
                 <div >
-                     <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[130px]  bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400 w-[130px]  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                     <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[50%]  bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400 w-[50%]  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
 
             </div>
@@ -130,8 +130,8 @@
                 <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Health</div>
                 </div>
                  <div >
-                    <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[130px] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400  p-4 w-[130px] bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                    <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[50%] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400  p-4 w-[50%] bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                  </div>
 
             </div>
@@ -148,8 +148,8 @@
                   <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Help</div>
                 </div>
              <div >
-                    <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[130px] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400  p-4 w-[130px] bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                    <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[50%] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400  p-4 w-[50%] bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
              </div>
 
             </div>
@@ -166,8 +166,8 @@
                 <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Govt.</div>
                 </div>
               <div>
-                   <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[130px]  bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400 w-[130px] p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                   <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[50%]  bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400 w-[50%] p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
               </div>
 
             </div>
@@ -184,8 +184,8 @@
                  <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-12 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Electricity</div>
                 </div>
                 <div>
-                     <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[130px] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400 w-[130px]  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                     <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[50%] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400 w-[50%]  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
 
             </div>
@@ -202,8 +202,8 @@
                     <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">NGO</div>
               </div>
                  <div>
-                    <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[130px] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400 w-[130px] p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                    <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[50%] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400 w-[50%] p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                  </div>
 
             </div>
@@ -220,8 +220,8 @@
                  <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Travel</div>
                 </div>
                 <div>
-                     <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[180px] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400 w-[180px]  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                     <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[50%] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400 w-[50%]  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
 
             </div>
