--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </header>
     <main class="bg-[#f5fff6]">
         <!-- hero banner section starts here -->
-         <section class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] min-h-[240px] hind-madurai-font px-14 py-4">
+         <section class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] h-[240px] hind-madurai-font px-14 py-4">
             <div class="flex flex-col justify-center items-center ">
                 <img src="./assets/logo-dark.png" alt="banner-image" class="w-24 ">
                 <h1 class="text-white text-4xl font-bold mt-5 ">Emergency Service Directory</h1>
@@ -64,7 +64,7 @@
             <!-- emergency-services-card-box -->
           <div id="emergency-services-card" class="grid grid-cols-3 gap-5">
               <!-- emergency-card-1 -->
-            <div class="min-w-full bg-white rounded-xl p-8 shadow-sm">
+            <div class=" bg-white rounded-xl p-8 shadow-sm">
                 <div class="flex justify-between items-center">
                     <img src="./assets/emergency.png" alt="emergency" class="w-9 bg-[#FFE3E2] p-2 rounded-lg">
                     <img src="./assets/heart1.png" alt="heart" class="w-6">
@@ -73,16 +73,16 @@
                     <h2 class="hind-madurai-font font-bold text-xl mt-3 ">National Emergency Number</h2>
                 <p class="roboto-font  text-[#5c5c5c]">National Emergency</p>
                 <p class="roboto-font font-bold text-3xl mt-3">999</p>
-                <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-7 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">All</div>
+                <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-6 py-2 min-w-[50px] h-10 flex justify-center items-center mt-3 rounded-full  ">All</div>
                  </div>
-                 <div >
-                    <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[50%] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400 w-[50%]   bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                 <div class="flex gap-2 w-full" >
+                    <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400 flex-1 p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                  </div>
 
             </div>
             <!-- emergency-card-2 -->
-            <div class="min-w-full bg-white rounded-xl p-8 shadow-sm">
+            <div class=" bg-white rounded-xl p-8 shadow-sm">
                 <div class="flex justify-between items-center">
                     <img src="./assets/police.png" alt="police" class="w-9 bg-[#DFEFFF] p-2 rounded-lg">
                     <img src="./assets/heart1.png" alt="heart" class="w-6">
@@ -91,16 +91,16 @@
                     <h2 class="hind-madurai-font font-bold text-xl mt-3 ">Police Helpline Number</h2>
                 <p class="roboto-font  text-[#5c5c5c]">Police</p>
                 <p class="roboto-font font-bold text-3xl mt-3">999</p>
-                   <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Police</div>
+                   <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-6 py-2 min-w-[50px] h-10 flex justify-center items-center mt-3 rounded-full  ">Police</div>
             </div>
-               <div >
-                  <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[50%] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400  p-4 w-[50%] bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+               <div class="flex gap-2 w-full" >
+                  <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400  p-4 flex-1 bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                </div>
 
             </div>
             <!-- emergency-card-3 -->
-            <div class="min-w-full bg-white rounded-xl p-8 shadow-sm">
+            <div class=" bg-white rounded-xl p-8 shadow-sm">
                 <div class="flex justify-between items-center">
                     <img src="./assets/fire-service.png" alt="fire-service" class="w-9 bg-[#FFE3E2] p-2 rounded-lg">
                     <img src="./assets/heart1.png" alt="heart" class="w-6">
@@ -109,16 +109,16 @@
                  <h2 class="hind-madurai-font font-bold text-xl mt-3 ">Fire Service Number</h2>
                 <p class="roboto-font  text-[#5c5c5c]">Fire Service</p>
                 <p class="roboto-font font-bold text-3xl mt-3">999</p>
-                <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Fire</div>
+                <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-6 py-2 min-w-[50px] h-10 flex justify-center items-center mt-3 rounded-full  ">Fire</div>
                </div>
-                <div >
-                     <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[50%]  bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400 w-[50%]  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                <div class="flex gap-2 w-full" >
+                     <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1  bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400 flex-1  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
 
             </div>
             <!-- emergency-card-4 -->
-            <div class="min-w-full bg-white rounded-xl p-8 shadow-sm">
+            <div class=" bg-white rounded-xl p-8 shadow-sm">
                 <div class="flex justify-between items-center">
                     <img src="./assets/ambulance.png" alt="ambulance" class="w-9 bg-[#FFE3E2] p-2 rounded-lg">
                     <img src="./assets/heart1.png" alt="heart" class="w-6">
@@ -127,16 +127,16 @@
                     <h2 class="hind-madurai-font font-bold text-xl mt-3 ">Ambulance Service</h2>
                 <p class="roboto-font  text-[#5c5c5c]">Ambulance</p>
                 <p class="roboto-font font-bold text-3xl mt-3">1994-999999</p>
-                <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Health</div>
+                <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-6 py-2 min-w-[50px] h-10 flex justify-center items-center mt-3 rounded-full  ">Health</div>
                 </div>
-                 <div >
-                    <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[50%] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400  p-4 w-[50%] bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                 <div class="flex gap-2 w-full" >
+                    <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400  p-4 flex-1 bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                  </div>
 
             </div>
             <!-- emergency-card-5 -->
-            <div class="min-w-full bg-white rounded-xl p-8 shadow-sm">
+            <div class=" bg-white rounded-xl p-8 shadow-sm">
                 <div class="flex justify-between items-center">
                     <img src="./assets/emergency.png" alt="emergency" class="w-9 bg-[#FFE3E2] p-2 rounded-lg">
                     <img src="./assets/heart1.png" alt="heart" class="w-6">
@@ -145,16 +145,16 @@
                    <h2 class="hind-madurai-font font-bold text-xl mt-3 ">Women & Child Helpline</h2>
                 <p class="roboto-font  text-[#5c5c5c]">Women & Child Helpline</p>
                 <p class="roboto-font font-bold text-3xl mt-3">109</p>
-                  <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Help</div>
+                  <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-6 py-2 min-w-[50px] h-10 flex justify-center items-center mt-3 rounded-full  ">Help</div>
                 </div>
-             <div >
-                    <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[50%] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400  p-4 w-[50%] bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+             <div class="flex gap-2 w-full" >
+                    <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400  p-4 flex-1 bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
              </div>
 
             </div>
             <!-- emergency-card-6 -->
-            <div class="min-w-full bg-white rounded-xl p-8 shadow-sm">
+            <div class=" bg-white rounded-xl p-8 shadow-sm">
                 <div class="flex justify-between items-center">
                     <img src="./assets/emergency.png" alt="emergency" class="w-9 bg-[#FFE3E2] p-2 rounded-lg">
                     <img src="./assets/heart1.png" alt="heart" class="w-6">
@@ -163,16 +163,16 @@
                     <h2 class="hind-madurai-font font-bold text-xl mt-3 ">Anti-Corruption Helpline</h2>
                 <p class="roboto-font  text-[#5c5c5c]">Anti-Corruption</p>
                 <p class="roboto-font font-bold text-3xl mt-3">106</p>
-                <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Govt.</div>
+                <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-6 py-2 min-w-[50px] h-10 flex justify-center items-center mt-3 rounded-full  ">Govt.</div>
                 </div>
-              <div>
-                   <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[50%]  bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400 w-[50%] p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+              <div class="flex gap-2 w-full" >
+                   <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1  bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400 flex-1 p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
               </div>
 
             </div>
             <!-- emergency-card-7 -->
-            <div class="min-w-full bg-white rounded-xl p-8 shadow-sm">
+            <div class=" bg-white rounded-xl p-8 shadow-sm">
                 <div class="flex justify-between items-center">
                     <img src="./assets/emergency.png" alt="emergency" class="w-9 bg-[#FFE3E2] p-2 rounded-lg">
                     <img src="./assets/heart1.png" alt="heart" class="w-6">
@@ -181,16 +181,16 @@
                     <h2 class="hind-madurai-font font-bold text-xl mt-3 ">Electricity Helpline</h2>
                 <p class="roboto-font  text-[#5c5c5c]">Electricity Outage</p>
                 <p class="roboto-font font-bold text-3xl mt-3">16216</p>
-                 <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-12 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Electricity</div>
+                 <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-6 py-2 min-w-[50px] h-10 flex justify-center items-center mt-3 rounded-full  ">Electricity</div>
                 </div>
-                <div>
-                     <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[50%] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400 w-[50%]  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                <div class="flex gap-2 w-full" >
+                     <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400 flex-1  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
 
             </div>
             <!-- emergency-card-8 -->
-            <div class="min-w-full bg-white rounded-xl p-8 shadow-sm">
+            <div class=" bg-white rounded-xl p-8 shadow-sm">
                 <div class="flex justify-between items-center">
                     <img src="./assets/brac.png" alt="brac" class="w-9 bg-[#FFE3E2] p-2 rounded-lg">
                     <img src="./assets/heart1.png" alt="heart" class="w-6">
@@ -199,16 +199,16 @@
                   <h2 class="hind-madurai-font font-bold text-xl mt-3 ">Brac Helpline</h2>
                 <p class="roboto-font  text-[#5c5c5c]">Brac</p>
                 <p class="roboto-font font-bold text-3xl mt-3">16445</p>
-                    <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">NGO</div>
+                    <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-6 py-2 min-w-[50px] h-10 flex justify-center items-center mt-3 rounded-full  ">NGO</div>
               </div>
-                 <div>
-                    <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[50%] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400 w-[50%] p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                 <div class="flex gap-2 w-full" >
+                    <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400 flex-1 p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                  </div>
 
             </div>
             <!-- emergency-card-9 -->
-            <div class="min-w-full bg-white rounded-xl p-8 shadow-sm">
+            <div class=" bg-white rounded-xl p-8 shadow-sm">
                 <div class="flex justify-between items-center">
                     <img src="./assets/Bangladesh-Railway.png" alt="Bangladesh-Railway" class="w-9 bg-[#FFE3E2] p-2 rounded-lg">
                     <img src="./assets/heart1.png" alt="heart" class="w-6">
@@ -217,11 +217,11 @@
                     <h2 class="hind-madurai-font font-bold text-xl mt-3  ">Bangladesh Railway Helpline </h2>
                 <p class="roboto-font  text-[#5c5c5c]">Bangladesh Railway</p>
                 <p class="roboto-font font-bold text-3xl mt-3">163</p>
-                 <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-10 py-4 w-[50px] h-[40px] mt-3 rounded-full  ">Travel</div>
+                 <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-6 py-2 min-w-[50px] h-10 flex justify-center items-center mt-3 rounded-full  ">Travel</div>
                 </div>
-                <div>
-                     <button class="btn hover:bg-gray-800 hover:text-white p-4 w-[50%] bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400 w-[50%]  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                <div class="flex gap-2 w-full" >
+                     <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="btn hover:bg-gray-400 flex-1  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
 
             </div>
@@ -231,7 +231,7 @@
            </section>
            <!-- call history container -->
            <aside id="call-history" class=" col-span-3">
-            <div class="bg-white rounded-xl p-6">
+            <div class="bg-white rounded-xl p-6 shadow-sm">
                <div class="flex justify-between items-center">
                  <h1 class="roboto-font text-xl text-[#111111] font-medium"><i class="fa-regular fa-clock"></i> Call History</h1>
                 <button class="btn btn-soft inter-font px-9 py-3 bg-[#00A63E] rounded-[50px]   text-white font-semibold text-[16px]">Clear</button>
