Update Emergency Hotline Services layout for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 
          </section>
          <!-- emergency services section starts here -->
-          <section id="emergency-service-container"  class="  w-11/12 mx-auto grid grid-cols-12 gap-8 py-10">
+          <section id="emergency-service-container"  class="  w-11/12 mx-auto grid-cols-1  grid lg:grid-cols-12 gap-8 py-10">
             <!-- emergency-services container -->
-           <section id="emergency-services" class=" col-span-9  ">
+           <section id="emergency-services" class="col-span-1 lg:col-span-9 order-2 lg:order-1  ">
             <!-- emergency-services-card-box -->
-          <div id="emergency-services-card" class="grid grid-cols-3 gap-5">
+          <div id="emergency-services-card" class=" grid grid-cols-1  lg:grid-cols-3 gap-5">
               <!-- emergency-card-1 -->
             <div class=" bg-white rounded-xl p-8 shadow-sm">
                 <div class="flex justify-between items-center">
@@ -230,8 +230,8 @@
 
            </section>
            <!-- call history container -->
-           <aside id="call-history" class=" col-span-3">
-            <div class="bg-white rounded-xl p-6 shadow-sm">
+           <aside id="call-history" class=" col-span-1 lg:col-span-3 order-1  lg:order-2">
+            <div class="bg-white rounded-xl p-6 shadow-sm  ">
                <div class="flex justify-between items-center">
                  <h1 class="roboto-font text-xl text-[#111111] font-medium"><i class="fa-regular fa-clock"></i> Call History</h1>
                 <button class="btn btn-soft inter-font px-9 py-3 bg-[#00A63E] rounded-[50px]   text-white font-semibold text-[16px]">Clear</button>
