--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
     </header>
     <main class="bg-[#f5fff6]">
         <!-- hero banner section starts here -->
-         <section class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] h-[240px] hind-madurai-font px-14 py-4">
+         <section class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] h-[240px] hind-madurai-font px-14 py-4 ">
             <div class="flex flex-col justify-center items-center ">
                 <img src="./assets/logo-dark.png" alt="banner-image" class="w-24 ">
-                <h1 class="text-white text-4xl font-bold mt-5 ">Emergency Service Directory</h1>
-                <p class="text-white font-semibold text-xl mt-6">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+                <h1 class="text-white text-3xl lg:text-4xl font-bold mt-5 ">Emergency Service Directory</h1>
+                <p class="text-white font-semibold text-sm text-center lg:text-xl mt-6">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
             </div>
 
          </section>
