--- a/index.html
+++ b/index.html
@@ -38,12 +38,16 @@
         <h1 class="text-[#006747] font-black ml-3 text-xl ">Emergency <br> Service</h1>
         </div>
         <!-- the container of buttons -->
-        <div class="space-x-5">
+        <div class="space-x-5 hidden lg:block">
             <button class="btn btn-soft px-6 py-3 bg-[#41ff6b1a] rounded-[50px] font-black text-[16px] ">0 <img src="./assets/heart.png" alt="heart" class="w-6"></button>
 
             <button class="btn btn-soft px-6 py-3 bg-[#41ff6b1a] rounded-[50px] font-black text-[16px] ">100<img src="./assets/coin.png" alt="coin" class="w-6"></button>
 
             <button class="btn btn-soft px-9 py-3 bg-[#00A63E] rounded-[50px]   text-white font-semibold text-[16px]">0 Copy</button>
+        </div>
+        <!-- hamburger menu -->
+        <div class="text-[#006747] font-bold text-2xl block lg:hidden">
+            <i class="fa-solid fa-bars"></i>
         </div>
 
     </header>
