--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="space-x-5 hidden lg:block">
             <button class="btn btn-soft px-6 py-3 bg-[#41ff6b1a] rounded-[50px] font-black text-[16px] "><span id="heart-count">0</span> <img id="nav-heart" src="./assets/heart.png" alt="heart" class="w-6"></button>
 
-            <button class="btn btn-soft px-6 py-3 bg-[#41ff6b1a] rounded-[50px] font-black text-[16px] ">100<img src="./assets/coin.png" alt="coin" class="w-6"></button>
+            <button class="btn btn-soft px-6 py-3 bg-[#41ff6b1a] rounded-[50px] font-black text-[16px] "><span id="btn-coin">100</span><img src="./assets/coin.png" alt="coin" class="w-6"></button>
 
             <button class="btn btn-soft px-9 py-3 bg-[#00A63E] rounded-[50px]   text-white font-semibold text-[16px]">0 Copy</button>
         </div>
@@ -81,7 +81,7 @@
                  </div>
                  <div class="flex gap-2 w-full" >
                     <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400 flex-1 p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                  <button class="call-btn btn hover:bg-gray-400 flex-1 p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                  </div>
 
             </div>
@@ -99,7 +99,7 @@
             </div>
                <div class="flex gap-2 w-full" >
                   <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400  p-4 flex-1 bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                  <button class="call-btn btn hover:bg-gray-400  p-4 flex-1 bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                </div>
 
             </div>
@@ -117,7 +117,7 @@
                </div>
                 <div class="flex gap-2 w-full" >
                      <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1  bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400 flex-1  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                  <button class="call-btn btn hover:bg-gray-400 flex-1  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
 
             </div>
@@ -135,7 +135,7 @@
                 </div>
                  <div class="flex gap-2 w-full" >
                     <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400  p-4 flex-1 bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                  <button class="call-btn btn hover:bg-gray-400  p-4 flex-1 bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                  </div>
 
             </div>
@@ -153,7 +153,7 @@
                 </div>
              <div class="flex gap-2 w-full" >
                     <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400  p-4 flex-1 bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                  <button class="call-btn btn hover:bg-gray-400  p-4 flex-1 bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
              </div>
 
             </div>
@@ -171,7 +171,7 @@
                 </div>
               <div class="flex gap-2 w-full" >
                    <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1  bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400 flex-1 p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                  <button class="call-btn btn hover:bg-gray-400 flex-1 p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
               </div>
 
             </div>
@@ -189,7 +189,7 @@
                 </div>
                 <div class="flex gap-2 w-full" >
                      <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400 flex-1  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                  <button class="call-btn btn hover:bg-gray-400 flex-1  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
 
             </div>
@@ -207,7 +207,7 @@
               </div>
                  <div class="flex gap-2 w-full" >
                     <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400 flex-1 p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                  <button class="call-btn btn hover:bg-gray-400 flex-1 p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                  </div>
 
             </div>
@@ -225,7 +225,7 @@
                 </div>
                 <div class="flex gap-2 w-full" >
                      <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                  <button class="btn hover:bg-gray-400 flex-1  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
+                  <button class="call-btn btn hover:bg-gray-400 flex-1  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
 
             </div>
@@ -235,13 +235,18 @@
            </section>
            <!-- call history container -->
            <aside id="call-history" class=" col-span-1 lg:col-span-3 order-1  lg:order-2">
-            <div class="bg-white rounded-xl p-6 shadow-sm  ">
+            <div class="bg-white rounded-xl p-6 shadow-sm lg:h-[1050px] ">
                <div class="flex justify-between items-center">
                  <h1 class="roboto-font text-xl text-[#111111] font-medium"><i class="fa-regular fa-clock"></i> Call History</h1>
-                <button class="btn btn-soft inter-font px-9 py-3 bg-[#00A63E] rounded-[50px]   text-white font-semibold text-[16px]">Clear</button>
+                <button id="clear-btn" class="btn btn-soft inter-font hover:bg-gray-400 px-9 py-3 bg-[#00A63E] rounded-[50px]   text-white font-semibold text-[16px]">Clear</button>
                </div>
+               <div id="call-history-container">
+              
 
             </div>
+
+            </div>
+            
 
            </aside>
 
